# eager-omega

./: .gitignore  Cargo.toml  README.md  eager-omega.code-workspace  eager-omega.tiled-project  tiled_types_export.json
assets/Maps/: one.world  sample-cave.tmx  sample.json  sample.tmx  spr_tileset_sunnysideworld_16px.tsx
src/: asset_tracking.rs  dev_tools.rs  human.rs  main.rs  player.rs  world_map.rs
src/characters/: human.rs  mod.rs
src/demo/: animation.rs  level.rs  movement.rs  player.rs
src/theme/: widget.rs
src/world_map/: beach.rs  grass.rs  island.rs  layer.rs  mod.rs  ocean.rs  tileset.rs  world_map.rs
