[package]
name = "eager-omega"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.0"
bevy-inspector-egui = "0.36.0"
bevy_ecs_tiled = { version = "0.11.2", features = ["atlas"] }
bevy_ecs_tilemap = "0.18.1"
macroquad = "0.4.14"
macroquad-tiled = "0.2.1"
noise = "0.9.0"
rand_chacha = "0.9.0"
